fixed links on header and margin of dark mode container

--- a/public/css/style-dark.css
+++ b/public/css/style-dark.css
@@ -391,6 +391,10 @@ body::-webkit-scrollbar {
     margin-top: 0;
     padding: 0 0 40px;
   }
+  .trm-app-frame .trm-content-start {
+    margin: 0;
+    z-index: 999;
+  }
 }
 
 /***************************
